[package]
name = "http3"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10.1"
futures = "0.3.31"
h3 = "0.0.6"
h3-quinn = "0.0.7"
http = "1.2.0"
quinn = "0.11.6"
rustls = { version = "0.23.23", features = ["ring"] }
rustls-pemfile = "2.2.0"
serde ={version = "1.0.218", features = ["derive"]}
serde_json = "1.0.140"
tokio ={version = "1.44.0", features = ["full"]}
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
